--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         for (let file of data) {
           if(file.name.includes(".jsnb") )
-          htmlString += `<li><a href="${file.path}">${file.name}.replaceAll("-"," ").replaceAll("_","").replace(".jsnb","")</a></li>`;
+          htmlString += `<li><a href="${file.path}">${file.name.replaceAll("-"," ").replaceAll("_","").replace(".jsnb","")}</a></li>`;
         }
 
         htmlString += '</ul>';
