--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         const response = await fetch('https://api.github.com/repos/gopi-suvanam/scribbler-examples/contents/');
         const data = await response.json();
         let htmlString = '<ul>';
-        
+        const scribblerURL = "https://app.scribbler.live";
+        const exampleURL="https://examples.scriibler.live/";
         for (let file of data) {
           if(file.name.includes(".jsnb") )
-          htmlString += `<li><a href="${file.path}">${file.name.replaceAll("-"," ").replaceAll("_","").replace(".jsnb","")}</a></li>`;
+          htmlString += `<li><a href="${scribblerURL+"?jsnb="=exampleURL+file.path}">${file.name.replaceAll("-"," ").replaceAll("_","").replace(".jsnb","")}</a></li>`;
         }
 
         htmlString += '</ul>';
