--- a/AI-Art.html
+++ b/AI-Art.html
@@ -1,1 +1,1 @@
-<iframe id="sandbox" style="width:100%;height:100%" src ="https://app.scribbler.live/sandbox.html?jsnb=github:gopi-suvanam/scribbler-examples/Web-Stable-Diffusion.jsnb"></iframe>
+<iframe id="sandbox" style="width:100%;height:100%" src ="https://app.scribbler.live/sandbox.html#github:gopi-suvanam/scribbler-examples/Web-Stable-Diffusion.jsnb"></iframe>
