--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       (async () => {
         const response = await fetch('https://api.github.com/repos/gopi-suvanam/scribbler-examples/contents/');
         const data = await response.json();
-        let htmlString = '<ul>';
+        let htmlString = '<ul class="row">';
         const scribblerURL = "https://app.scribbler.live";
         const exampleURL="https://examples.scribbler.live/";
         for (let file of data) {
