--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       border-radius: 10px;
       padding: 20px;
       margin-bottom: 20px;
+      margin-left: 5px;
+      margin-right: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
@@ -30,7 +32,7 @@
         const exampleURL="https://examples.scribbler.live/";
         for (let file of data) {
           if(file.name.includes(".jsnb") )
-          htmlString += `<li class="col-md-4 col-sm-6 mb-4" ><a href="${scribblerURL+"?jsnb="+exampleURL+file.path}">${file.name.replaceAll("-"," ").replaceAll("_","").replace(".jsnb","")}</a></li>`;
+          htmlString += `<li class="col-md-3 col-sm-4 mb-4" ><a href="${scribblerURL+"?jsnb="+exampleURL+file.path}">${file.name.replaceAll("-"," ").replaceAll("_","").replace(".jsnb","")}</a></li>`;
         }
 
         htmlString += '</ul>';
