--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       margin-left: 5px;
       margin-right: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      min-height:100px;
     }
 
     </style>
