--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
       min-height:100px;
     }
 
+    h1{
+
+      background-color: #fede02;
+      line-height: 2;
+      color: #555;
+      padding-left: 20px;
+    }
+    #list{
+      padding:40px;
+    }
     </style>
   </head>
   <body>
