--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         document.getElementById('list').innerHTML = htmlString;
       })()
     </script>
-    <h1>List of Sample Notebooks</h1>
+    <h1>List of Sample Scribbler Notebooks in JavaScript</h1>
     <div id='list'></div>
   <body>
 </html>
