--- a/index.html
+++ b/index.html
@@ -2,35 +2,8 @@
   <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <style>
-      ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
+    <link rel="stylesheet" href="/res/css/style.css" >
     
-    li {
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 20px;
-      margin-bottom: 20px;
-      margin-left: 5px;
-      margin-right: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      min-height:100px;
-    }
-
-    h1{
-
-      background-color: #fede02;
-      line-height: 2;
-      color: #555;
-      padding-left: 20px;
-    }
-    #list{
-      padding:40px;
-    }
-    </style>
   </head>
   <body>
     <script>
@@ -42,7 +15,7 @@
         const exampleURL="https://examples.scribbler.live/";
         for (let file of data) {
           if(file.name.includes(".jsnb") )
-          htmlString += `<li class="col-md-3 col-sm-4 mb-4" ><a href="${scribblerURL+"?jsnb="+exampleURL+file.path}">${file.name.replaceAll("-"," ").replaceAll("_","").replace(".jsnb","")}</a></li>`;
+          htmlString += `<li class="col-md-3 col-sm-4 mb-4 card" ><a href="${scribblerURL+"?jsnb="+exampleURL+file.path}">${file.name.replaceAll("-"," ").replaceAll("_","").replace(".jsnb","")}</a></li>`;
         }
 
         htmlString += '</ul>';
